--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.29",
+    "@types/nodemailer": "^6.4.14",
     "prisma": "^5.11.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
@@ -29,6 +30,7 @@
     "express": "^4.18.3",
     "http-status": "^1.7.4",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.13",
     "ts-node-dev": "^2.0.0",
     "zod": "^3.22.4"
   }
