--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.29",
     "@types/nodemailer": "^6.4.14",
+    "@types/uuid": "^9.0.8",
     "prisma": "^5.11.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
@@ -36,6 +37,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
     "ts-node-dev": "^2.0.0",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   }
 }
