--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@prisma/client": "^5.11.0",
     "@types/cookie-parser": "^1.4.7",
     "@types/multer": "^1.4.11",
+    "@types/node-cron": "^3.0.11",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.2.0",
@@ -36,6 +37,7 @@
     "http-status": "^1.7.4",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "ts-node-dev": "^2.0.0",
     "uuid": "^9.0.1",
